// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`work-package walk snapshots (baseline) > [default] matches committed baseline 1`] = `
{
  "finalStatus": "completed",
  "initialActivity": "start-work-package",
  "orchestratorUnresolved": [
    "agent-conduct::checkpoint-discipline",
    "agent-conduct::operational-discipline",
    "agent-conduct::orchestrator-discipline",
    "workflow-engine::bubble-checkpoint-up",
    "workflow-engine::persist",
  ],
  "path": [
    "start-work-package",
    "design-philosophy",
    "codebase-comprehension",
    "plan-prepare",
    "assumptions-review",
    "implement",
    "post-impl-review",
    "validate",
    "strategic-review",
    "submit-for-review",
    "complete",
  ],
  "policy": "default",
  "steps": [
    {
      "activity": "start-work-package",
      "artifacts": [],
      "artifactsWritten": [],
      "checkpoints": [
        {
          "id": "issue-verification",
          "option": "provide-existing",
          "setVariable": {
            "needs_issue_creation": false,
          },
        },
        {
          "id": "pr-creation",
          "option": "proceed",
          "setVariable": {
            "pr_skipped": false,
          },
        },
      ],
      "manifestStatus": "valid",
      "next": "design-philosophy",
      "orphanCheckpoints": [
        "issue-review",
        "issue-type-selection",
        "jira-project-selection",
      ],
      "stepsExecuted": [
        "resolve-reference",
        "analyze-reference-with-gitnexus",
        "verify-signing-precondition",
        "detect-merge-strategy",
        "detect-project-type",
        "check-issue",
        "activate-issue",
        "present-problem-overview",
        "derive-branch-name",
        "compute-canonical-target-path",
        "create-component-worktree",
        "check-branch",
        "check-pr",
        "create-pr",
        "initialize-planning-folder",
        "determine-next-activity",
      ],
      "unresolved": [
        "agent-conduct::checkpoint-discipline",
        "agent-conduct::code-commentary",
        "agent-conduct::file-sensitivity",
        "agent-conduct::operational-discipline",
      ],
    },
    {
      "activity": "design-philosophy",
      "artifacts": [
        "design-philosophy.md",
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "design-philosophy.md",
        "assumptions-log.md",
      ],
      "checkpoints": [
        {
          "id": "classification-confirmed",
          "option": "confirmed",
          "setVariable": undefined,
        },
        {
          "id": "workflow-path-selected",
          "option": "skip-optional",
          "setVariable": {
            "needs_elicitation": false,
            "needs_research": false,
            "path_gating_complexity": "simple",
            "skip_optional_activities": true,
          },
        },
      ],
      "manifestStatus": "warning",
      "next": "codebase-comprehension",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "define-problem",
        "classify-problem",
        "determine-path",
        "document-philosophy",
        "collect-assumptions",
        "create-assumptions-log",
        "reconcile-assumptions",
      ],
      "unresolved": [
        "agent-conduct::checkpoint-discipline",
        "agent-conduct::code-commentary",
        "agent-conduct::file-sensitivity",
        "agent-conduct::operational-discipline",
      ],
    },
    {
      "activity": "codebase-comprehension",
      "artifacts": [
        "{codebase-area}.md",
      ],
      "artifactsWritten": [],
      "checkpoints": [],
      "manifestStatus": "warning",
      "next": "plan-prepare",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "check-existing-artifacts",
        "review-existing",
        "architecture-survey",
        "key-abstractions",
        "design-rationale",
        "domain-concept-mapping",
        "create-comprehension-artifact",
        "initial-deep-dive",
        "initial-lens-pass",
        "update-artifact-initial",
        "revise-initial-questions",
        "deep-dive-loop",
      ],
      "unresolved": [
        "agent-conduct::checkpoint-discipline",
        "agent-conduct::code-commentary",
        "agent-conduct::file-sensitivity",
        "agent-conduct::operational-discipline",
      ],
    },
    {
      "activity": "plan-prepare",
      "artifacts": [
        "work-package-plan.md",
        "test-plan.md",
      ],
      "artifactsWritten": [
        "work-package-plan.md",
        "test-plan.md",
      ],
      "checkpoints": [
        {
          "id": "approach-confirmed",
          "option": "confirmed",
          "setVariable": undefined,
        },
      ],
      "manifestStatus": "valid",
      "next": "assumptions-review",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "env-prerequisites",
        "apply-design",
        "create-plan",
        "create-test-plan",
        "present-solution-overview",
        "collect-assumptions",
        "update-assumptions-log",
        "reconcile-assumptions",
        "create-todos",
        "sync-branch",
        "update-pr",
      ],
      "unresolved": [
        "agent-conduct::checkpoint-discipline",
        "agent-conduct::code-commentary",
        "agent-conduct::file-sensitivity",
        "agent-conduct::operational-discipline",
      ],
    },
    {
      "activity": "assumptions-review",
      "artifacts": [
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "assumptions-log.md",
      ],
      "checkpoints": [],
      "manifestStatus": "valid",
      "next": "implement",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "evaluate-open-assumptions",
        "update-assumptions-log",
      ],
      "unresolved": [
        "agent-conduct::checkpoint-discipline",
        "agent-conduct::code-commentary",
        "agent-conduct::file-sensitivity",
        "agent-conduct::operational-discipline",
      ],
    },
    {
      "activity": "implement",
      "artifacts": [
        "assumptions-log.md",
        "provenance-log.md",
      ],
      "artifactsWritten": [
        "assumptions-log.md",
        "provenance-log.md",
      ],
      "checkpoints": [
        {
          "id": "switch-model-post-impl",
          "option": "continue-current",
          "setVariable": undefined,
        },
      ],
      "manifestStatus": "warning",
      "next": "post-impl-review",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "reconcile-assumptions",
        "present-resolved-assumptions",
        "interview-open-assumptions",
        "update-assumptions-log",
      ],
      "unresolved": [
        "agent-conduct::checkpoint-discipline",
        "agent-conduct::code-commentary",
        "agent-conduct::file-sensitivity",
        "agent-conduct::operational-discipline",
      ],
    },
    {
      "activity": "post-impl-review",
      "artifacts": [
        "change-block-index.md",
        "manual-diff-review.md",
        "code-review.md",
        "test-suite-review.md",
        "architecture-summary.md",
        "structural-findings.md",
      ],
      "artifactsWritten": [
        "change-block-index.md",
        "manual-diff-review.md",
        "code-review.md",
        "test-suite-review.md",
        "architecture-summary.md",
        "structural-findings.md",
      ],
      "checkpoints": [
        {
          "id": "file-index-table",
          "option": "rationale-confirmed",
          "setVariable": {
            "rationale_confirmed": true,
          },
        },
      ],
      "manifestStatus": "valid",
      "next": "validate",
      "orphanCheckpoints": [
        "block-interview",
        "rationale-amendment",
      ],
      "stepsExecuted": [
        "gitnexus-detect-changes-preflight",
        "manual-diff-review",
        "code-review",
        "structural-analysis-inline",
        "test-suite-review",
        "architecture-summary",
        "classify-and-route-findings",
      ],
      "unresolved": [
        "agent-conduct::checkpoint-discipline",
        "agent-conduct::code-commentary",
        "agent-conduct::file-sensitivity",
        "agent-conduct::operational-discipline",
      ],
    },
    {
      "activity": "validate",
      "artifacts": [],
      "artifactsWritten": [],
      "checkpoints": [],
      "manifestStatus": "warning",
      "next": "strategic-review",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "evaluate-results",
        "fix-failures",
      ],
      "unresolved": [
        "agent-conduct::checkpoint-discipline",
        "agent-conduct::code-commentary",
        "agent-conduct::file-sensitivity",
        "agent-conduct::operational-discipline",
        "cargo-operations::build-release",
        "cargo-operations::preflight",
        "cargo-operations::run-suite",
        "manage-artifacts::verify-readme-conforms",
        "validate-build::aggregate-results",
        "validate-build::analyze-failure",
        "validate-build::apply-fix",
      ],
    },
    {
      "activity": "strategic-review",
      "artifacts": [
        "strategic-review-{n}.md",
        "architecture-summary.md",
      ],
      "artifactsWritten": [
        "strategic-review-{n}.md",
        "architecture-summary.md",
      ],
      "checkpoints": [
        {
          "id": "review-findings",
          "option": "acceptable",
          "setVariable": {
            "review_passed": true,
          },
        },
      ],
      "manifestStatus": "warning",
      "next": "submit-for-review",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "diff-review",
        "identify-artifacts",
        "verify-readme",
        "ensure-changes-folder-entry",
        "verify-change-fragment",
        "document-findings",
        "apply-cleanup",
        "create-architecture-summary",
        "analyze-strategic-findings",
      ],
      "unresolved": [
        "agent-conduct::checkpoint-discipline",
        "agent-conduct::code-commentary",
        "agent-conduct::file-sensitivity",
        "agent-conduct::operational-discipline",
      ],
    },
    {
      "activity": "submit-for-review",
      "artifacts": [],
      "artifactsWritten": [],
      "checkpoints": [
        {
          "id": "dco-sign-off",
          "option": "certify",
          "setVariable": undefined,
        },
        {
          "id": "review-received",
          "option": "yes-review",
          "setVariable": undefined,
        },
        {
          "id": "review-outcome",
          "option": "approved",
          "setVariable": {
            "review_requires_changes": false,
          },
        },
      ],
      "manifestStatus": "warning",
      "next": "complete",
      "orphanCheckpoints": [
        "body-non-conformant",
      ],
      "stepsExecuted": [
        "dco-sign-off",
        "push-commits",
        "update-description",
        "instruct-merge-strategy",
        "mark-ready",
        "await-review",
        "process-review-comments",
        "determine-review-outcome",
        "analyze-review-outcome",
      ],
      "unresolved": [
        "agent-conduct::checkpoint-discipline",
        "agent-conduct::code-commentary",
        "agent-conduct::file-sensitivity",
        "agent-conduct::operational-discipline",
      ],
    },
    {
      "activity": "complete",
      "artifacts": [
        "NNNN-{decision-title}.md",
        "COMPLETE.md",
        "workflow-retrospective.md",
        "{YYYY-MM-DD}-pr{pr_number}-review-analysis.md",
      ],
      "artifactsWritten": [
        "COMPLETE.md",
        "workflow-retrospective.md",
      ],
      "checkpoints": [],
      "manifestStatus": "warning",
      "next": null,
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "finalize-test-plan",
        "create-complete-doc",
        "ensure-docs",
        "capture-history",
        "retrospective",
        "update-status",
        "select-next",
      ],
      "unresolved": [
        "agent-conduct::checkpoint-discipline",
        "agent-conduct::code-commentary",
        "agent-conduct::file-sensitivity",
        "agent-conduct::operational-discipline",
      ],
    },
  ],
  "workflowId": "work-package",
}
`;

exports[`work-package walk snapshots (baseline) > [elicitation-only] matches committed baseline 1`] = `
{
  "finalStatus": "completed",
  "initialActivity": "start-work-package",
  "orchestratorUnresolved": [
    "agent-conduct::checkpoint-discipline",
    "agent-conduct::operational-discipline",
    "agent-conduct::orchestrator-discipline",
    "workflow-engine::bubble-checkpoint-up",
    "workflow-engine::persist",
  ],
  "path": [
    "start-work-package",
    "design-philosophy",
    "codebase-comprehension",
    "requirements-elicitation",
    "research",
    "implementation-analysis",
    "plan-prepare",
    "assumptions-review",
    "implement",
    "post-impl-review",
    "validate",
    "strategic-review",
    "submit-for-review",
    "complete",
  ],
  "policy": "elicitation-only",
  "steps": [
    {
      "activity": "start-work-package",
      "artifacts": [],
      "artifactsWritten": [],
      "checkpoints": [
        {
          "id": "issue-verification",
          "option": "provide-existing",
          "setVariable": {
            "needs_issue_creation": false,
          },
        },
        {
          "id": "pr-creation",
          "option": "proceed",
          "setVariable": {
            "pr_skipped": false,
          },
        },
      ],
      "manifestStatus": "valid",
      "next": "design-philosophy",
      "orphanCheckpoints": [
        "issue-review",
        "issue-type-selection",
        "jira-project-selection",
      ],
      "stepsExecuted": [
        "resolve-reference",
        "analyze-reference-with-gitnexus",
        "verify-signing-precondition",
        "detect-merge-strategy",
        "detect-project-type",
        "check-issue",
        "activate-issue",
        "present-problem-overview",
        "derive-branch-name",
        "compute-canonical-target-path",
        "create-component-worktree",
        "check-branch",
        "check-pr",
        "create-pr",
        "initialize-planning-folder",
        "determine-next-activity",
      ],
      "unresolved": [
        "agent-conduct::checkpoint-discipline",
        "agent-conduct::code-commentary",
        "agent-conduct::file-sensitivity",
        "agent-conduct::operational-discipline",
      ],
    },
    {
      "activity": "design-philosophy",
      "artifacts": [
        "design-philosophy.md",
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "design-philosophy.md",
        "assumptions-log.md",
      ],
      "checkpoints": [
        {
          "id": "classification-confirmed",
          "option": "confirmed",
          "setVariable": undefined,
        },
        {
          "id": "workflow-path-selected",
          "option": "elicitation-only",
          "setVariable": {
            "complexity": "moderate",
            "needs_elicitation": true,
            "needs_research": false,
            "skip_optional_activities": false,
          },
        },
      ],
      "manifestStatus": "warning",
      "next": "codebase-comprehension",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "define-problem",
        "classify-problem",
        "determine-path",
        "document-philosophy",
        "collect-assumptions",
        "create-assumptions-log",
        "reconcile-assumptions",
      ],
      "unresolved": [
        "agent-conduct::checkpoint-discipline",
        "agent-conduct::code-commentary",
        "agent-conduct::file-sensitivity",
        "agent-conduct::operational-discipline",
      ],
    },
    {
      "activity": "codebase-comprehension",
      "artifacts": [
        "{codebase-area}.md",
      ],
      "artifactsWritten": [],
      "checkpoints": [],
      "manifestStatus": "warning",
      "next": "requirements-elicitation",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "check-existing-artifacts",
        "review-existing",
        "architecture-survey",
        "key-abstractions",
        "design-rationale",
        "domain-concept-mapping",
        "create-comprehension-artifact",
        "initial-deep-dive",
        "initial-lens-pass",
        "update-artifact-initial",
        "revise-initial-questions",
        "deep-dive-loop",
      ],
      "unresolved": [
        "agent-conduct::checkpoint-discipline",
        "agent-conduct::code-commentary",
        "agent-conduct::file-sensitivity",
        "agent-conduct::operational-discipline",
      ],
    },
    {
      "activity": "requirements-elicitation",
      "artifacts": [
        "requirements-elicitation.md",
      ],
      "artifactsWritten": [
        "requirements-elicitation.md",
      ],
      "checkpoints": [
        {
          "id": "stakeholder-transcript",
          "option": "provide-transcript",
          "setVariable": {
            "has_stakeholder_input": true,
          },
        },
        {
          "id": "elicitation-complete",
          "option": "complete",
          "setVariable": {
            "elicitation_complete": true,
          },
        },
      ],
      "manifestStatus": "valid",
      "next": "research",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "stakeholder-discussion",
        "elicit-requirements",
        "collect-assumptions",
        "create-document",
        "update-assumptions-log",
        "reconcile-assumptions",
      ],
      "unresolved": [
        "agent-conduct::checkpoint-discipline",
        "agent-conduct::code-commentary",
        "agent-conduct::file-sensitivity",
        "agent-conduct::operational-discipline",
      ],
    },
    {
      "activity": "research",
      "artifacts": [
        "kb-research.md",
      ],
      "artifactsWritten": [
        "kb-research.md",
      ],
      "checkpoints": [
        {
          "id": "research-findings",
          "option": "sufficient",
          "setVariable": undefined,
        },
        {
          "id": "context-scope-declaration",
          "option": "repo-only",
          "setVariable": {
            "context_scope": "repo-only",
          },
        },
      ],
      "manifestStatus": "valid",
      "next": "implementation-analysis",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "kb-research",
        "web-research",
        "synthesize",
        "collect-assumptions",
        "document",
        "update-assumptions-log",
        "reconcile-assumptions",
        "present-resolved-assumptions",
        "declare-context-scope",
        "interview-open-assumptions",
      ],
      "unresolved": [
        "agent-conduct::checkpoint-discipline",
        "agent-conduct::code-commentary",
        "agent-conduct::file-sensitivity",
        "agent-conduct::operational-discipline",
      ],
    },
    {
      "activity": "implementation-analysis",
      "artifacts": [
        "implementation-analysis.md",
      ],
      "artifactsWritten": [
        "implementation-analysis.md",
      ],
      "checkpoints": [
        {
          "id": "analysis-confirmed",
          "option": "confirmed",
          "setVariable": undefined,
        },
      ],
      "manifestStatus": "valid",
      "next": "plan-prepare",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "review-implementation",
        "evaluate-effectiveness",
        "establish-baselines",
        "collect-assumptions",
        "document",
        "update-assumptions-log",
        "reconcile-assumptions",
        "present-resolved-assumptions",
        "interview-open-assumptions",
      ],
      "unresolved": [
        "agent-conduct::checkpoint-discipline",
        "agent-conduct::code-commentary",
        "agent-conduct::file-sensitivity",
        "agent-conduct::operational-discipline",
      ],
    },
    {
      "activity": "plan-prepare",
      "artifacts": [
        "work-package-plan.md",
        "test-plan.md",
      ],
      "artifactsWritten": [
        "work-package-plan.md",
        "test-plan.md",
      ],
      "checkpoints": [
        {
          "id": "approach-confirmed",
          "option": "confirmed",
          "setVariable": undefined,
        },
      ],
      "manifestStatus": "warning",
      "next": "assumptions-review",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "env-prerequisites",
        "apply-design",
        "create-plan",
        "create-test-plan",
        "present-solution-overview",
        "collect-assumptions",
        "update-assumptions-log",
        "reconcile-assumptions",
        "create-todos",
        "sync-branch",
        "update-pr",
      ],
      "unresolved": [
        "agent-conduct::checkpoint-discipline",
        "agent-conduct::code-commentary",
        "agent-conduct::file-sensitivity",
        "agent-conduct::operational-discipline",
      ],
    },
    {
      "activity": "assumptions-review",
      "artifacts": [
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "assumptions-log.md",
      ],
      "checkpoints": [],
      "manifestStatus": "valid",
      "next": "implement",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "evaluate-open-assumptions",
        "update-assumptions-log",
      ],
      "unresolved": [
        "agent-conduct::checkpoint-discipline",
        "agent-conduct::code-commentary",
        "agent-conduct::file-sensitivity",
        "agent-conduct::operational-discipline",
      ],
    },
    {
      "activity": "implement",
      "artifacts": [
        "assumptions-log.md",
        "provenance-log.md",
      ],
      "artifactsWritten": [
        "assumptions-log.md",
        "provenance-log.md",
      ],
      "checkpoints": [
        {
          "id": "switch-model-post-impl",
          "option": "continue-current",
          "setVariable": undefined,
        },
      ],
      "manifestStatus": "warning",
      "next": "post-impl-review",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "reconcile-assumptions",
        "present-resolved-assumptions",
        "interview-open-assumptions",
        "update-assumptions-log",
      ],
      "unresolved": [
        "agent-conduct::checkpoint-discipline",
        "agent-conduct::code-commentary",
        "agent-conduct::file-sensitivity",
        "agent-conduct::operational-discipline",
      ],
    },
    {
      "activity": "post-impl-review",
      "artifacts": [
        "change-block-index.md",
        "manual-diff-review.md",
        "code-review.md",
        "test-suite-review.md",
        "architecture-summary.md",
        "structural-findings.md",
      ],
      "artifactsWritten": [
        "change-block-index.md",
        "manual-diff-review.md",
        "code-review.md",
        "test-suite-review.md",
        "architecture-summary.md",
        "structural-findings.md",
      ],
      "checkpoints": [
        {
          "id": "file-index-table",
          "option": "rationale-confirmed",
          "setVariable": {
            "rationale_confirmed": true,
          },
        },
      ],
      "manifestStatus": "valid",
      "next": "validate",
      "orphanCheckpoints": [
        "block-interview",
        "rationale-amendment",
      ],
      "stepsExecuted": [
        "gitnexus-detect-changes-preflight",
        "manual-diff-review",
        "code-review",
        "structural-analysis-inline",
        "test-suite-review",
        "architecture-summary",
        "classify-and-route-findings",
      ],
      "unresolved": [
        "agent-conduct::checkpoint-discipline",
        "agent-conduct::code-commentary",
        "agent-conduct::file-sensitivity",
        "agent-conduct::operational-discipline",
      ],
    },
    {
      "activity": "validate",
      "artifacts": [],
      "artifactsWritten": [],
      "checkpoints": [],
      "manifestStatus": "warning",
      "next": "strategic-review",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "evaluate-results",
        "fix-failures",
      ],
      "unresolved": [
        "agent-conduct::checkpoint-discipline",
        "agent-conduct::code-commentary",
        "agent-conduct::file-sensitivity",
        "agent-conduct::operational-discipline",
        "cargo-operations::build-release",
        "cargo-operations::preflight",
        "cargo-operations::run-suite",
        "manage-artifacts::verify-readme-conforms",
        "validate-build::aggregate-results",
        "validate-build::analyze-failure",
        "validate-build::apply-fix",
      ],
    },
    {
      "activity": "strategic-review",
      "artifacts": [
        "strategic-review-{n}.md",
        "architecture-summary.md",
      ],
      "artifactsWritten": [
        "strategic-review-{n}.md",
        "architecture-summary.md",
      ],
      "checkpoints": [
        {
          "id": "review-findings",
          "option": "acceptable",
          "setVariable": {
            "review_passed": true,
          },
        },
      ],
      "manifestStatus": "warning",
      "next": "submit-for-review",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "diff-review",
        "identify-artifacts",
        "verify-readme",
        "ensure-changes-folder-entry",
        "verify-change-fragment",
        "document-findings",
        "apply-cleanup",
        "create-architecture-summary",
        "analyze-strategic-findings",
      ],
      "unresolved": [
        "agent-conduct::checkpoint-discipline",
        "agent-conduct::code-commentary",
        "agent-conduct::file-sensitivity",
        "agent-conduct::operational-discipline",
      ],
    },
    {
      "activity": "submit-for-review",
      "artifacts": [],
      "artifactsWritten": [],
      "checkpoints": [
        {
          "id": "dco-sign-off",
          "option": "certify",
          "setVariable": undefined,
        },
        {
          "id": "review-received",
          "option": "yes-review",
          "setVariable": undefined,
        },
        {
          "id": "review-outcome",
          "option": "approved",
          "setVariable": {
            "review_requires_changes": false,
          },
        },
      ],
      "manifestStatus": "warning",
      "next": "complete",
      "orphanCheckpoints": [
        "body-non-conformant",
      ],
      "stepsExecuted": [
        "dco-sign-off",
        "push-commits",
        "update-description",
        "instruct-merge-strategy",
        "mark-ready",
        "await-review",
        "process-review-comments",
        "determine-review-outcome",
        "analyze-review-outcome",
      ],
      "unresolved": [
        "agent-conduct::checkpoint-discipline",
        "agent-conduct::code-commentary",
        "agent-conduct::file-sensitivity",
        "agent-conduct::operational-discipline",
      ],
    },
    {
      "activity": "complete",
      "artifacts": [
        "NNNN-{decision-title}.md",
        "COMPLETE.md",
        "workflow-retrospective.md",
        "{YYYY-MM-DD}-pr{pr_number}-review-analysis.md",
      ],
      "artifactsWritten": [
        "COMPLETE.md",
        "workflow-retrospective.md",
      ],
      "checkpoints": [],
      "manifestStatus": "warning",
      "next": null,
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "create-adr",
        "update-adr-status",
        "finalize-test-plan",
        "create-complete-doc",
        "ensure-docs",
        "capture-history",
        "retrospective",
        "update-status",
        "select-next",
      ],
      "unresolved": [
        "agent-conduct::checkpoint-discipline",
        "agent-conduct::code-commentary",
        "agent-conduct::file-sensitivity",
        "agent-conduct::operational-discipline",
      ],
    },
  ],
  "workflowId": "work-package",
}
`;

exports[`work-package walk snapshots (baseline) > [full-workflow] matches committed baseline 1`] = `
{
  "finalStatus": "completed",
  "initialActivity": "start-work-package",
  "orchestratorUnresolved": [
    "agent-conduct::checkpoint-discipline",
    "agent-conduct::operational-discipline",
    "agent-conduct::orchestrator-discipline",
    "workflow-engine::bubble-checkpoint-up",
    "workflow-engine::persist",
  ],
  "path": [
    "start-work-package",
    "design-philosophy",
    "codebase-comprehension",
    "requirements-elicitation",
    "research",
    "implementation-analysis",
    "plan-prepare",
    "assumptions-review",
    "implement",
    "post-impl-review",
    "validate",
    "strategic-review",
    "submit-for-review",
    "complete",
  ],
  "policy": "full-workflow",
  "steps": [
    {
      "activity": "start-work-package",
      "artifacts": [],
      "artifactsWritten": [],
      "checkpoints": [
        {
          "id": "issue-verification",
          "option": "provide-existing",
          "setVariable": {
            "needs_issue_creation": false,
          },
        },
        {
          "id": "pr-creation",
          "option": "proceed",
          "setVariable": {
            "pr_skipped": false,
          },
        },
      ],
      "manifestStatus": "valid",
      "next": "design-philosophy",
      "orphanCheckpoints": [
        "issue-review",
        "issue-type-selection",
        "jira-project-selection",
      ],
      "stepsExecuted": [
        "resolve-reference",
        "analyze-reference-with-gitnexus",
        "verify-signing-precondition",
        "detect-merge-strategy",
        "detect-project-type",
        "check-issue",
        "activate-issue",
        "present-problem-overview",
        "derive-branch-name",
        "compute-canonical-target-path",
        "create-component-worktree",
        "check-branch",
        "check-pr",
        "create-pr",
        "initialize-planning-folder",
        "determine-next-activity",
      ],
      "unresolved": [
        "agent-conduct::checkpoint-discipline",
        "agent-conduct::code-commentary",
        "agent-conduct::file-sensitivity",
        "agent-conduct::operational-discipline",
      ],
    },
    {
      "activity": "design-philosophy",
      "artifacts": [
        "design-philosophy.md",
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "design-philosophy.md",
        "assumptions-log.md",
      ],
      "checkpoints": [
        {
          "id": "classification-confirmed",
          "option": "confirmed",
          "setVariable": undefined,
        },
        {
          "id": "workflow-path-selected",
          "option": "full-workflow",
          "setVariable": {
            "complexity": "complex",
            "needs_elicitation": true,
            "needs_research": true,
            "skip_optional_activities": false,
          },
        },
      ],
      "manifestStatus": "warning",
      "next": "codebase-comprehension",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "define-problem",
        "classify-problem",
        "determine-path",
        "document-philosophy",
        "collect-assumptions",
        "create-assumptions-log",
        "reconcile-assumptions",
      ],
      "unresolved": [
        "agent-conduct::checkpoint-discipline",
        "agent-conduct::code-commentary",
        "agent-conduct::file-sensitivity",
        "agent-conduct::operational-discipline",
      ],
    },
    {
      "activity": "codebase-comprehension",
      "artifacts": [
        "{codebase-area}.md",
      ],
      "artifactsWritten": [],
      "checkpoints": [],
      "manifestStatus": "warning",
      "next": "requirements-elicitation",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "check-existing-artifacts",
        "review-existing",
        "architecture-survey",
        "key-abstractions",
        "design-rationale",
        "domain-concept-mapping",
        "create-comprehension-artifact",
        "initial-deep-dive",
        "initial-lens-pass",
        "update-artifact-initial",
        "revise-initial-questions",
        "deep-dive-loop",
      ],
      "unresolved": [
        "agent-conduct::checkpoint-discipline",
        "agent-conduct::code-commentary",
        "agent-conduct::file-sensitivity",
        "agent-conduct::operational-discipline",
      ],
    },
    {
      "activity": "requirements-elicitation",
      "artifacts": [
        "requirements-elicitation.md",
      ],
      "artifactsWritten": [
        "requirements-elicitation.md",
      ],
      "checkpoints": [
        {
          "id": "stakeholder-transcript",
          "option": "provide-transcript",
          "setVariable": {
            "has_stakeholder_input": true,
          },
        },
        {
          "id": "elicitation-complete",
          "option": "complete",
          "setVariable": {
            "elicitation_complete": true,
          },
        },
      ],
      "manifestStatus": "valid",
      "next": "research",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "stakeholder-discussion",
        "elicit-requirements",
        "collect-assumptions",
        "create-document",
        "update-assumptions-log",
        "reconcile-assumptions",
      ],
      "unresolved": [
        "agent-conduct::checkpoint-discipline",
        "agent-conduct::code-commentary",
        "agent-conduct::file-sensitivity",
        "agent-conduct::operational-discipline",
      ],
    },
    {
      "activity": "research",
      "artifacts": [
        "kb-research.md",
      ],
      "artifactsWritten": [
        "kb-research.md",
      ],
      "checkpoints": [
        {
          "id": "research-findings",
          "option": "sufficient",
          "setVariable": undefined,
        },
        {
          "id": "context-scope-declaration",
          "option": "repo-only",
          "setVariable": {
            "context_scope": "repo-only",
          },
        },
      ],
      "manifestStatus": "valid",
      "next": "implementation-analysis",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "kb-research",
        "web-research",
        "synthesize",
        "collect-assumptions",
        "document",
        "update-assumptions-log",
        "reconcile-assumptions",
        "present-resolved-assumptions",
        "declare-context-scope",
        "interview-open-assumptions",
      ],
      "unresolved": [
        "agent-conduct::checkpoint-discipline",
        "agent-conduct::code-commentary",
        "agent-conduct::file-sensitivity",
        "agent-conduct::operational-discipline",
      ],
    },
    {
      "activity": "implementation-analysis",
      "artifacts": [
        "implementation-analysis.md",
      ],
      "artifactsWritten": [
        "implementation-analysis.md",
      ],
      "checkpoints": [
        {
          "id": "analysis-confirmed",
          "option": "confirmed",
          "setVariable": undefined,
        },
      ],
      "manifestStatus": "valid",
      "next": "plan-prepare",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "review-implementation",
        "evaluate-effectiveness",
        "establish-baselines",
        "collect-assumptions",
        "document",
        "update-assumptions-log",
        "reconcile-assumptions",
        "present-resolved-assumptions",
        "interview-open-assumptions",
      ],
      "unresolved": [
        "agent-conduct::checkpoint-discipline",
        "agent-conduct::code-commentary",
        "agent-conduct::file-sensitivity",
        "agent-conduct::operational-discipline",
      ],
    },
    {
      "activity": "plan-prepare",
      "artifacts": [
        "work-package-plan.md",
        "test-plan.md",
      ],
      "artifactsWritten": [
        "work-package-plan.md",
        "test-plan.md",
      ],
      "checkpoints": [
        {
          "id": "approach-confirmed",
          "option": "confirmed",
          "setVariable": undefined,
        },
      ],
      "manifestStatus": "warning",
      "next": "assumptions-review",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "env-prerequisites",
        "apply-design",
        "create-plan",
        "create-test-plan",
        "present-solution-overview",
        "collect-assumptions",
        "update-assumptions-log",
        "reconcile-assumptions",
        "create-todos",
        "sync-branch",
        "update-pr",
      ],
      "unresolved": [
        "agent-conduct::checkpoint-discipline",
        "agent-conduct::code-commentary",
        "agent-conduct::file-sensitivity",
        "agent-conduct::operational-discipline",
      ],
    },
    {
      "activity": "assumptions-review",
      "artifacts": [
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "assumptions-log.md",
      ],
      "checkpoints": [],
      "manifestStatus": "valid",
      "next": "implement",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "evaluate-open-assumptions",
        "update-assumptions-log",
      ],
      "unresolved": [
        "agent-conduct::checkpoint-discipline",
        "agent-conduct::code-commentary",
        "agent-conduct::file-sensitivity",
        "agent-conduct::operational-discipline",
      ],
    },
    {
      "activity": "implement",
      "artifacts": [
        "assumptions-log.md",
        "provenance-log.md",
      ],
      "artifactsWritten": [
        "assumptions-log.md",
        "provenance-log.md",
      ],
      "checkpoints": [
        {
          "id": "switch-model-post-impl",
          "option": "continue-current",
          "setVariable": undefined,
        },
      ],
      "manifestStatus": "warning",
      "next": "post-impl-review",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "reconcile-assumptions",
        "present-resolved-assumptions",
        "interview-open-assumptions",
        "update-assumptions-log",
      ],
      "unresolved": [
        "agent-conduct::checkpoint-discipline",
        "agent-conduct::code-commentary",
        "agent-conduct::file-sensitivity",
        "agent-conduct::operational-discipline",
      ],
    },
    {
      "activity": "post-impl-review",
      "artifacts": [
        "change-block-index.md",
        "manual-diff-review.md",
        "code-review.md",
        "test-suite-review.md",
        "architecture-summary.md",
        "structural-findings.md",
      ],
      "artifactsWritten": [
        "change-block-index.md",
        "manual-diff-review.md",
        "code-review.md",
        "test-suite-review.md",
        "architecture-summary.md",
        "structural-findings.md",
      ],
      "checkpoints": [
        {
          "id": "file-index-table",
          "option": "rationale-confirmed",
          "setVariable": {
            "rationale_confirmed": true,
          },
        },
      ],
      "manifestStatus": "valid",
      "next": "validate",
      "orphanCheckpoints": [
        "block-interview",
        "rationale-amendment",
      ],
      "stepsExecuted": [
        "gitnexus-detect-changes-preflight",
        "manual-diff-review",
        "code-review",
        "dispatch-prism",
        "test-suite-review",
        "architecture-summary",
        "classify-and-route-findings",
      ],
      "unresolved": [
        "agent-conduct::checkpoint-discipline",
        "agent-conduct::code-commentary",
        "agent-conduct::file-sensitivity",
        "agent-conduct::operational-discipline",
      ],
    },
    {
      "activity": "validate",
      "artifacts": [],
      "artifactsWritten": [],
      "checkpoints": [],
      "manifestStatus": "warning",
      "next": "strategic-review",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "evaluate-results",
        "fix-failures",
      ],
      "unresolved": [
        "agent-conduct::checkpoint-discipline",
        "agent-conduct::code-commentary",
        "agent-conduct::file-sensitivity",
        "agent-conduct::operational-discipline",
        "cargo-operations::build-release",
        "cargo-operations::preflight",
        "cargo-operations::run-suite",
        "manage-artifacts::verify-readme-conforms",
        "validate-build::aggregate-results",
        "validate-build::analyze-failure",
        "validate-build::apply-fix",
      ],
    },
    {
      "activity": "strategic-review",
      "artifacts": [
        "strategic-review-{n}.md",
        "architecture-summary.md",
      ],
      "artifactsWritten": [
        "strategic-review-{n}.md",
        "architecture-summary.md",
      ],
      "checkpoints": [
        {
          "id": "review-findings",
          "option": "acceptable",
          "setVariable": {
            "review_passed": true,
          },
        },
      ],
      "manifestStatus": "warning",
      "next": "submit-for-review",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "diff-review",
        "identify-artifacts",
        "verify-readme",
        "ensure-changes-folder-entry",
        "verify-change-fragment",
        "document-findings",
        "apply-cleanup",
        "create-architecture-summary",
        "analyze-strategic-findings",
      ],
      "unresolved": [
        "agent-conduct::checkpoint-discipline",
        "agent-conduct::code-commentary",
        "agent-conduct::file-sensitivity",
        "agent-conduct::operational-discipline",
      ],
    },
    {
      "activity": "submit-for-review",
      "artifacts": [],
      "artifactsWritten": [],
      "checkpoints": [
        {
          "id": "dco-sign-off",
          "option": "certify",
          "setVariable": undefined,
        },
        {
          "id": "review-received",
          "option": "yes-review",
          "setVariable": undefined,
        },
        {
          "id": "review-outcome",
          "option": "approved",
          "setVariable": {
            "review_requires_changes": false,
          },
        },
      ],
      "manifestStatus": "warning",
      "next": "complete",
      "orphanCheckpoints": [
        "body-non-conformant",
      ],
      "stepsExecuted": [
        "dco-sign-off",
        "push-commits",
        "update-description",
        "instruct-merge-strategy",
        "mark-ready",
        "await-review",
        "process-review-comments",
        "determine-review-outcome",
        "analyze-review-outcome",
      ],
      "unresolved": [
        "agent-conduct::checkpoint-discipline",
        "agent-conduct::code-commentary",
        "agent-conduct::file-sensitivity",
        "agent-conduct::operational-discipline",
      ],
    },
    {
      "activity": "complete",
      "artifacts": [
        "NNNN-{decision-title}.md",
        "COMPLETE.md",
        "workflow-retrospective.md",
        "{YYYY-MM-DD}-pr{pr_number}-review-analysis.md",
      ],
      "artifactsWritten": [
        "COMPLETE.md",
        "workflow-retrospective.md",
      ],
      "checkpoints": [],
      "manifestStatus": "warning",
      "next": null,
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "create-adr",
        "update-adr-status",
        "finalize-test-plan",
        "create-complete-doc",
        "ensure-docs",
        "capture-history",
        "retrospective",
        "update-status",
        "select-next",
      ],
      "unresolved": [
        "agent-conduct::checkpoint-discipline",
        "agent-conduct::code-commentary",
        "agent-conduct::file-sensitivity",
        "agent-conduct::operational-discipline",
      ],
    },
  ],
  "workflowId": "work-package",
}
`;

exports[`work-package walk snapshots (baseline) > [research-only] matches committed baseline 1`] = `
{
  "finalStatus": "completed",
  "initialActivity": "start-work-package",
  "orchestratorUnresolved": [
    "agent-conduct::checkpoint-discipline",
    "agent-conduct::operational-discipline",
    "agent-conduct::orchestrator-discipline",
    "workflow-engine::bubble-checkpoint-up",
    "workflow-engine::persist",
  ],
  "path": [
    "start-work-package",
    "design-philosophy",
    "codebase-comprehension",
    "research",
    "implementation-analysis",
    "plan-prepare",
    "assumptions-review",
    "implement",
    "post-impl-review",
    "validate",
    "strategic-review",
    "submit-for-review",
    "complete",
  ],
  "policy": "research-only",
  "steps": [
    {
      "activity": "start-work-package",
      "artifacts": [],
      "artifactsWritten": [],
      "checkpoints": [
        {
          "id": "issue-verification",
          "option": "provide-existing",
          "setVariable": {
            "needs_issue_creation": false,
          },
        },
        {
          "id": "pr-creation",
          "option": "proceed",
          "setVariable": {
            "pr_skipped": false,
          },
        },
      ],
      "manifestStatus": "valid",
      "next": "design-philosophy",
      "orphanCheckpoints": [
        "issue-review",
        "issue-type-selection",
        "jira-project-selection",
      ],
      "stepsExecuted": [
        "resolve-reference",
        "analyze-reference-with-gitnexus",
        "verify-signing-precondition",
        "detect-merge-strategy",
        "detect-project-type",
        "check-issue",
        "activate-issue",
        "present-problem-overview",
        "derive-branch-name",
        "compute-canonical-target-path",
        "create-component-worktree",
        "check-branch",
        "check-pr",
        "create-pr",
        "initialize-planning-folder",
        "determine-next-activity",
      ],
      "unresolved": [
        "agent-conduct::checkpoint-discipline",
        "agent-conduct::code-commentary",
        "agent-conduct::file-sensitivity",
        "agent-conduct::operational-discipline",
      ],
    },
    {
      "activity": "design-philosophy",
      "artifacts": [
        "design-philosophy.md",
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "design-philosophy.md",
        "assumptions-log.md",
      ],
      "checkpoints": [
        {
          "id": "classification-confirmed",
          "option": "confirmed",
          "setVariable": undefined,
        },
        {
          "id": "workflow-path-selected",
          "option": "research-only",
          "setVariable": {
            "complexity": "moderate",
            "needs_elicitation": false,
            "needs_research": true,
            "skip_optional_activities": false,
          },
        },
      ],
      "manifestStatus": "warning",
      "next": "codebase-comprehension",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "define-problem",
        "classify-problem",
        "determine-path",
        "document-philosophy",
        "collect-assumptions",
        "create-assumptions-log",
        "reconcile-assumptions",
      ],
      "unresolved": [
        "agent-conduct::checkpoint-discipline",
        "agent-conduct::code-commentary",
        "agent-conduct::file-sensitivity",
        "agent-conduct::operational-discipline",
      ],
    },
    {
      "activity": "codebase-comprehension",
      "artifacts": [
        "{codebase-area}.md",
      ],
      "artifactsWritten": [],
      "checkpoints": [],
      "manifestStatus": "warning",
      "next": "research",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "check-existing-artifacts",
        "review-existing",
        "architecture-survey",
        "key-abstractions",
        "design-rationale",
        "domain-concept-mapping",
        "create-comprehension-artifact",
        "initial-deep-dive",
        "initial-lens-pass",
        "update-artifact-initial",
        "revise-initial-questions",
        "deep-dive-loop",
      ],
      "unresolved": [
        "agent-conduct::checkpoint-discipline",
        "agent-conduct::code-commentary",
        "agent-conduct::file-sensitivity",
        "agent-conduct::operational-discipline",
      ],
    },
    {
      "activity": "research",
      "artifacts": [
        "kb-research.md",
      ],
      "artifactsWritten": [
        "kb-research.md",
      ],
      "checkpoints": [
        {
          "id": "research-findings",
          "option": "sufficient",
          "setVariable": undefined,
        },
        {
          "id": "context-scope-declaration",
          "option": "repo-only",
          "setVariable": {
            "context_scope": "repo-only",
          },
        },
      ],
      "manifestStatus": "valid",
      "next": "implementation-analysis",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "kb-research",
        "web-research",
        "synthesize",
        "collect-assumptions",
        "document",
        "update-assumptions-log",
        "reconcile-assumptions",
        "present-resolved-assumptions",
        "declare-context-scope",
        "interview-open-assumptions",
      ],
      "unresolved": [
        "agent-conduct::checkpoint-discipline",
        "agent-conduct::code-commentary",
        "agent-conduct::file-sensitivity",
        "agent-conduct::operational-discipline",
      ],
    },
    {
      "activity": "implementation-analysis",
      "artifacts": [
        "implementation-analysis.md",
      ],
      "artifactsWritten": [
        "implementation-analysis.md",
      ],
      "checkpoints": [
        {
          "id": "analysis-confirmed",
          "option": "confirmed",
          "setVariable": undefined,
        },
      ],
      "manifestStatus": "valid",
      "next": "plan-prepare",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "review-implementation",
        "evaluate-effectiveness",
        "establish-baselines",
        "collect-assumptions",
        "document",
        "update-assumptions-log",
        "reconcile-assumptions",
        "present-resolved-assumptions",
        "interview-open-assumptions",
      ],
      "unresolved": [
        "agent-conduct::checkpoint-discipline",
        "agent-conduct::code-commentary",
        "agent-conduct::file-sensitivity",
        "agent-conduct::operational-discipline",
      ],
    },
    {
      "activity": "plan-prepare",
      "artifacts": [
        "work-package-plan.md",
        "test-plan.md",
      ],
      "artifactsWritten": [
        "work-package-plan.md",
        "test-plan.md",
      ],
      "checkpoints": [
        {
          "id": "approach-confirmed",
          "option": "confirmed",
          "setVariable": undefined,
        },
      ],
      "manifestStatus": "warning",
      "next": "assumptions-review",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "env-prerequisites",
        "apply-design",
        "create-plan",
        "create-test-plan",
        "present-solution-overview",
        "collect-assumptions",
        "update-assumptions-log",
        "reconcile-assumptions",
        "create-todos",
        "sync-branch",
        "update-pr",
      ],
      "unresolved": [
        "agent-conduct::checkpoint-discipline",
        "agent-conduct::code-commentary",
        "agent-conduct::file-sensitivity",
        "agent-conduct::operational-discipline",
      ],
    },
    {
      "activity": "assumptions-review",
      "artifacts": [
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "assumptions-log.md",
      ],
      "checkpoints": [],
      "manifestStatus": "valid",
      "next": "implement",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "evaluate-open-assumptions",
        "update-assumptions-log",
      ],
      "unresolved": [
        "agent-conduct::checkpoint-discipline",
        "agent-conduct::code-commentary",
        "agent-conduct::file-sensitivity",
        "agent-conduct::operational-discipline",
      ],
    },
    {
      "activity": "implement",
      "artifacts": [
        "assumptions-log.md",
        "provenance-log.md",
      ],
      "artifactsWritten": [
        "assumptions-log.md",
        "provenance-log.md",
      ],
      "checkpoints": [
        {
          "id": "switch-model-post-impl",
          "option": "continue-current",
          "setVariable": undefined,
        },
      ],
      "manifestStatus": "warning",
      "next": "post-impl-review",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "reconcile-assumptions",
        "present-resolved-assumptions",
        "interview-open-assumptions",
        "update-assumptions-log",
      ],
      "unresolved": [
        "agent-conduct::checkpoint-discipline",
        "agent-conduct::code-commentary",
        "agent-conduct::file-sensitivity",
        "agent-conduct::operational-discipline",
      ],
    },
    {
      "activity": "post-impl-review",
      "artifacts": [
        "change-block-index.md",
        "manual-diff-review.md",
        "code-review.md",
        "test-suite-review.md",
        "architecture-summary.md",
        "structural-findings.md",
      ],
      "artifactsWritten": [
        "change-block-index.md",
        "manual-diff-review.md",
        "code-review.md",
        "test-suite-review.md",
        "architecture-summary.md",
        "structural-findings.md",
      ],
      "checkpoints": [
        {
          "id": "file-index-table",
          "option": "rationale-confirmed",
          "setVariable": {
            "rationale_confirmed": true,
          },
        },
      ],
      "manifestStatus": "valid",
      "next": "validate",
      "orphanCheckpoints": [
        "block-interview",
        "rationale-amendment",
      ],
      "stepsExecuted": [
        "gitnexus-detect-changes-preflight",
        "manual-diff-review",
        "code-review",
        "structural-analysis-inline",
        "test-suite-review",
        "architecture-summary",
        "classify-and-route-findings",
      ],
      "unresolved": [
        "agent-conduct::checkpoint-discipline",
        "agent-conduct::code-commentary",
        "agent-conduct::file-sensitivity",
        "agent-conduct::operational-discipline",
      ],
    },
    {
      "activity": "validate",
      "artifacts": [],
      "artifactsWritten": [],
      "checkpoints": [],
      "manifestStatus": "warning",
      "next": "strategic-review",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "evaluate-results",
        "fix-failures",
      ],
      "unresolved": [
        "agent-conduct::checkpoint-discipline",
        "agent-conduct::code-commentary",
        "agent-conduct::file-sensitivity",
        "agent-conduct::operational-discipline",
        "cargo-operations::build-release",
        "cargo-operations::preflight",
        "cargo-operations::run-suite",
        "manage-artifacts::verify-readme-conforms",
        "validate-build::aggregate-results",
        "validate-build::analyze-failure",
        "validate-build::apply-fix",
      ],
    },
    {
      "activity": "strategic-review",
      "artifacts": [
        "strategic-review-{n}.md",
        "architecture-summary.md",
      ],
      "artifactsWritten": [
        "strategic-review-{n}.md",
        "architecture-summary.md",
      ],
      "checkpoints": [
        {
          "id": "review-findings",
          "option": "acceptable",
          "setVariable": {
            "review_passed": true,
          },
        },
      ],
      "manifestStatus": "warning",
      "next": "submit-for-review",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "diff-review",
        "identify-artifacts",
        "verify-readme",
        "ensure-changes-folder-entry",
        "verify-change-fragment",
        "document-findings",
        "apply-cleanup",
        "create-architecture-summary",
        "analyze-strategic-findings",
      ],
      "unresolved": [
        "agent-conduct::checkpoint-discipline",
        "agent-conduct::code-commentary",
        "agent-conduct::file-sensitivity",
        "agent-conduct::operational-discipline",
      ],
    },
    {
      "activity": "submit-for-review",
      "artifacts": [],
      "artifactsWritten": [],
      "checkpoints": [
        {
          "id": "dco-sign-off",
          "option": "certify",
          "setVariable": undefined,
        },
        {
          "id": "review-received",
          "option": "yes-review",
          "setVariable": undefined,
        },
        {
          "id": "review-outcome",
          "option": "approved",
          "setVariable": {
            "review_requires_changes": false,
          },
        },
      ],
      "manifestStatus": "warning",
      "next": "complete",
      "orphanCheckpoints": [
        "body-non-conformant",
      ],
      "stepsExecuted": [
        "dco-sign-off",
        "push-commits",
        "update-description",
        "instruct-merge-strategy",
        "mark-ready",
        "await-review",
        "process-review-comments",
        "determine-review-outcome",
        "analyze-review-outcome",
      ],
      "unresolved": [
        "agent-conduct::checkpoint-discipline",
        "agent-conduct::code-commentary",
        "agent-conduct::file-sensitivity",
        "agent-conduct::operational-discipline",
      ],
    },
    {
      "activity": "complete",
      "artifacts": [
        "NNNN-{decision-title}.md",
        "COMPLETE.md",
        "workflow-retrospective.md",
        "{YYYY-MM-DD}-pr{pr_number}-review-analysis.md",
      ],
      "artifactsWritten": [
        "COMPLETE.md",
        "workflow-retrospective.md",
      ],
      "checkpoints": [],
      "manifestStatus": "warning",
      "next": null,
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "create-adr",
        "update-adr-status",
        "finalize-test-plan",
        "create-complete-doc",
        "ensure-docs",
        "capture-history",
        "retrospective",
        "update-status",
        "select-next",
      ],
      "unresolved": [
        "agent-conduct::checkpoint-discipline",
        "agent-conduct::code-commentary",
        "agent-conduct::file-sensitivity",
        "agent-conduct::operational-discipline",
      ],
    },
  ],
  "workflowId": "work-package",
}
`;

exports[`work-package walk snapshots (baseline) > [review-mode] matches committed baseline 1`] = `
{
  "finalStatus": "completed",
  "initialActivity": "start-work-package",
  "orchestratorUnresolved": [
    "agent-conduct::checkpoint-discipline",
    "agent-conduct::operational-discipline",
    "agent-conduct::orchestrator-discipline",
    "workflow-engine::bubble-checkpoint-up",
    "workflow-engine::persist",
  ],
  "path": [
    "start-work-package",
    "design-philosophy",
    "codebase-comprehension",
    "plan-prepare",
    "assumptions-review",
    "implement",
    "post-impl-review",
    "validate",
    "strategic-review",
    "submit-for-review",
    "complete",
  ],
  "policy": "review-mode",
  "steps": [
    {
      "activity": "start-work-package",
      "artifacts": [],
      "artifactsWritten": [],
      "checkpoints": [
        {
          "id": "review-mode-detection",
          "option": "confirm-review",
          "setVariable": {
            "is_review_mode": true,
          },
        },
        {
          "id": "review-pr-reference",
          "option": "pr-provided",
          "setVariable": {
            "review_pr_captured": true,
          },
        },
        {
          "id": "issue-verification",
          "option": "provide-existing",
          "setVariable": {
            "needs_issue_creation": false,
          },
        },
      ],
      "manifestStatus": "valid",
      "next": "design-philosophy",
      "orphanCheckpoints": [
        "issue-review",
        "issue-type-selection",
        "jira-project-selection",
      ],
      "stepsExecuted": [
        "detect-review-mode",
        "capture-pr-reference",
        "resolve-reference",
        "analyze-reference-with-gitnexus",
        "verify-signing-precondition",
        "detect-merge-strategy",
        "detect-project-type",
        "check-issue",
        "activate-issue",
        "present-problem-overview",
        "compute-canonical-target-path",
        "create-review-worktree",
        "check-branch",
        "initialize-planning-folder",
        "determine-next-activity",
      ],
      "unresolved": [
        "agent-conduct::checkpoint-discipline",
        "agent-conduct::code-commentary",
        "agent-conduct::file-sensitivity",
        "agent-conduct::operational-discipline",
      ],
    },
    {
      "activity": "design-philosophy",
      "artifacts": [
        "design-philosophy.md",
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "design-philosophy.md",
        "assumptions-log.md",
      ],
      "checkpoints": [
        {
          "id": "classification-confirmed",
          "option": "confirmed",
          "setVariable": undefined,
        },
        {
          "id": "workflow-path-selected",
          "option": "skip-optional",
          "setVariable": {
            "needs_elicitation": false,
            "needs_research": false,
            "path_gating_complexity": "simple",
            "skip_optional_activities": true,
          },
        },
        {
          "id": "ticket-completeness",
          "option": "refactor-ticket",
          "setVariable": {
            "ticket_refactor_needed": true,
          },
        },
      ],
      "manifestStatus": "warning",
      "next": "codebase-comprehension",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "define-problem",
        "classify-problem",
        "determine-path",
        "document-philosophy",
        "collect-assumptions",
        "create-assumptions-log",
        "reconcile-assumptions",
        "assess-ticket-completeness",
        "set-review-mode-path",
      ],
      "unresolved": [
        "agent-conduct::checkpoint-discipline",
        "agent-conduct::code-commentary",
        "agent-conduct::file-sensitivity",
        "agent-conduct::operational-discipline",
      ],
    },
    {
      "activity": "codebase-comprehension",
      "artifacts": [
        "{codebase-area}.md",
      ],
      "artifactsWritten": [],
      "checkpoints": [],
      "manifestStatus": "valid",
      "next": "plan-prepare",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "check-existing-artifacts",
        "review-existing",
        "architecture-survey",
        "key-abstractions",
        "design-rationale",
        "domain-concept-mapping",
        "create-comprehension-artifact",
        "initial-deep-dive",
        "initial-lens-pass",
        "update-artifact-initial",
        "revise-initial-questions",
        "deep-dive-loop",
      ],
      "unresolved": [
        "agent-conduct::checkpoint-discipline",
        "agent-conduct::code-commentary",
        "agent-conduct::file-sensitivity",
        "agent-conduct::operational-discipline",
      ],
    },
    {
      "activity": "plan-prepare",
      "artifacts": [
        "work-package-plan.md",
        "test-plan.md",
      ],
      "artifactsWritten": [
        "work-package-plan.md",
        "test-plan.md",
      ],
      "checkpoints": [
        {
          "id": "approach-confirmed",
          "option": "confirmed",
          "setVariable": undefined,
        },
      ],
      "manifestStatus": "valid",
      "next": "assumptions-review",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "env-prerequisites",
        "apply-design",
        "create-plan",
        "create-test-plan",
        "present-solution-overview",
        "collect-assumptions",
        "update-assumptions-log",
        "reconcile-assumptions",
        "create-todos",
        "sync-branch",
        "update-pr",
      ],
      "unresolved": [
        "agent-conduct::checkpoint-discipline",
        "agent-conduct::code-commentary",
        "agent-conduct::file-sensitivity",
        "agent-conduct::operational-discipline",
      ],
    },
    {
      "activity": "assumptions-review",
      "artifacts": [
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "assumptions-log.md",
      ],
      "checkpoints": [],
      "manifestStatus": "valid",
      "next": "implement",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "evaluate-open-assumptions",
        "update-assumptions-log",
      ],
      "unresolved": [
        "agent-conduct::checkpoint-discipline",
        "agent-conduct::code-commentary",
        "agent-conduct::file-sensitivity",
        "agent-conduct::operational-discipline",
      ],
    },
    {
      "activity": "implement",
      "artifacts": [
        "assumptions-log.md",
        "provenance-log.md",
      ],
      "artifactsWritten": [
        "assumptions-log.md",
        "provenance-log.md",
      ],
      "checkpoints": [
        {
          "id": "switch-model-post-impl",
          "option": "continue-current",
          "setVariable": undefined,
        },
      ],
      "manifestStatus": "warning",
      "next": "post-impl-review",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "reconcile-assumptions",
        "present-resolved-assumptions",
        "interview-open-assumptions",
        "update-assumptions-log",
      ],
      "unresolved": [
        "agent-conduct::checkpoint-discipline",
        "agent-conduct::code-commentary",
        "agent-conduct::file-sensitivity",
        "agent-conduct::operational-discipline",
      ],
    },
    {
      "activity": "post-impl-review",
      "artifacts": [
        "change-block-index.md",
        "manual-diff-review.md",
        "code-review.md",
        "test-suite-review.md",
        "architecture-summary.md",
        "structural-findings.md",
      ],
      "artifactsWritten": [
        "change-block-index.md",
        "manual-diff-review.md",
        "code-review.md",
        "test-suite-review.md",
        "architecture-summary.md",
        "structural-findings.md",
      ],
      "checkpoints": [
        {
          "id": "file-index-table",
          "option": "rationale-confirmed",
          "setVariable": {
            "rationale_confirmed": true,
          },
        },
      ],
      "manifestStatus": "valid",
      "next": "validate",
      "orphanCheckpoints": [
        "block-interview",
        "rationale-amendment",
      ],
      "stepsExecuted": [
        "gitnexus-detect-changes-preflight",
        "manual-diff-review",
        "code-review",
        "structural-analysis-inline",
        "test-suite-review",
        "architecture-summary",
        "classify-and-route-findings",
      ],
      "unresolved": [
        "agent-conduct::checkpoint-discipline",
        "agent-conduct::code-commentary",
        "agent-conduct::file-sensitivity",
        "agent-conduct::operational-discipline",
      ],
    },
    {
      "activity": "validate",
      "artifacts": [],
      "artifactsWritten": [],
      "checkpoints": [],
      "manifestStatus": "warning",
      "next": "strategic-review",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "evaluate-results",
        "document-failures",
        "assess-test-coverage",
      ],
      "unresolved": [
        "agent-conduct::checkpoint-discipline",
        "agent-conduct::code-commentary",
        "agent-conduct::file-sensitivity",
        "agent-conduct::operational-discipline",
        "cargo-operations::build-release",
        "cargo-operations::preflight",
        "cargo-operations::run-suite",
        "manage-artifacts::verify-readme-conforms",
        "validate-build::aggregate-results",
        "validate-build::analyze-failure",
        "validate-build::apply-fix",
      ],
    },
    {
      "activity": "strategic-review",
      "artifacts": [
        "strategic-review-{n}.md",
        "architecture-summary.md",
      ],
      "artifactsWritten": [
        "strategic-review-{n}.md",
        "architecture-summary.md",
      ],
      "checkpoints": [
        {
          "id": "review-findings",
          "option": "acceptable",
          "setVariable": {
            "review_passed": true,
          },
        },
      ],
      "manifestStatus": "warning",
      "next": "submit-for-review",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "diff-review",
        "identify-artifacts",
        "verify-readme",
        "ensure-changes-folder-entry",
        "verify-change-fragment",
        "document-findings",
        "document-cleanup-recommendations",
        "create-architecture-summary",
        "analyze-strategic-findings",
      ],
      "unresolved": [
        "agent-conduct::checkpoint-discipline",
        "agent-conduct::code-commentary",
        "agent-conduct::file-sensitivity",
        "agent-conduct::operational-discipline",
      ],
    },
    {
      "activity": "submit-for-review",
      "artifacts": [],
      "artifactsWritten": [],
      "checkpoints": [
        {
          "id": "review-summary-approval",
          "option": "post-review",
          "setVariable": {
            "review_posted": true,
          },
        },
        {
          "id": "review-received",
          "option": "yes-review",
          "setVariable": undefined,
        },
        {
          "id": "review-outcome",
          "option": "approved",
          "setVariable": {
            "review_requires_changes": false,
          },
        },
      ],
      "manifestStatus": "warning",
      "next": "complete",
      "orphanCheckpoints": [
        "body-non-conformant",
      ],
      "stepsExecuted": [
        "consolidate-review-findings",
        "generate-review-summary",
        "present-summary-to-user",
        "post-pr-review",
        "await-review",
        "process-review-comments",
        "determine-review-outcome",
        "analyze-review-outcome",
      ],
      "unresolved": [
        "agent-conduct::checkpoint-discipline",
        "agent-conduct::code-commentary",
        "agent-conduct::file-sensitivity",
        "agent-conduct::operational-discipline",
      ],
    },
    {
      "activity": "complete",
      "artifacts": [
        "NNNN-{decision-title}.md",
        "COMPLETE.md",
        "workflow-retrospective.md",
        "{YYYY-MM-DD}-pr{pr_number}-review-analysis.md",
      ],
      "artifactsWritten": [
        "COMPLETE.md",
        "workflow-retrospective.md",
      ],
      "checkpoints": [],
      "manifestStatus": "warning",
      "next": null,
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "capture-history",
        "retrospective",
        "update-status",
        "select-next",
      ],
      "unresolved": [
        "agent-conduct::checkpoint-discipline",
        "agent-conduct::code-commentary",
        "agent-conduct::file-sensitivity",
        "agent-conduct::operational-discipline",
      ],
    },
  ],
  "workflowId": "work-package",
}
`;

exports[`work-package walk snapshots (baseline) > [skip-optional] matches committed baseline 1`] = `
{
  "finalStatus": "completed",
  "initialActivity": "start-work-package",
  "orchestratorUnresolved": [
    "agent-conduct::checkpoint-discipline",
    "agent-conduct::operational-discipline",
    "agent-conduct::orchestrator-discipline",
    "workflow-engine::bubble-checkpoint-up",
    "workflow-engine::persist",
  ],
  "path": [
    "start-work-package",
    "design-philosophy",
    "codebase-comprehension",
    "plan-prepare",
    "assumptions-review",
    "implement",
    "post-impl-review",
    "validate",
    "strategic-review",
    "submit-for-review",
    "complete",
  ],
  "policy": "skip-optional",
  "steps": [
    {
      "activity": "start-work-package",
      "artifacts": [],
      "artifactsWritten": [],
      "checkpoints": [
        {
          "id": "issue-verification",
          "option": "provide-existing",
          "setVariable": {
            "needs_issue_creation": false,
          },
        },
        {
          "id": "pr-creation",
          "option": "proceed",
          "setVariable": {
            "pr_skipped": false,
          },
        },
      ],
      "manifestStatus": "valid",
      "next": "design-philosophy",
      "orphanCheckpoints": [
        "issue-review",
        "issue-type-selection",
        "jira-project-selection",
      ],
      "stepsExecuted": [
        "resolve-reference",
        "analyze-reference-with-gitnexus",
        "verify-signing-precondition",
        "detect-merge-strategy",
        "detect-project-type",
        "check-issue",
        "activate-issue",
        "present-problem-overview",
        "derive-branch-name",
        "compute-canonical-target-path",
        "create-component-worktree",
        "check-branch",
        "check-pr",
        "create-pr",
        "initialize-planning-folder",
        "determine-next-activity",
      ],
      "unresolved": [
        "agent-conduct::checkpoint-discipline",
        "agent-conduct::code-commentary",
        "agent-conduct::file-sensitivity",
        "agent-conduct::operational-discipline",
      ],
    },
    {
      "activity": "design-philosophy",
      "artifacts": [
        "design-philosophy.md",
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "design-philosophy.md",
        "assumptions-log.md",
      ],
      "checkpoints": [
        {
          "id": "classification-confirmed",
          "option": "confirmed",
          "setVariable": undefined,
        },
        {
          "id": "workflow-path-selected",
          "option": "skip-optional",
          "setVariable": {
            "needs_elicitation": false,
            "needs_research": false,
            "path_gating_complexity": "simple",
            "skip_optional_activities": true,
          },
        },
      ],
      "manifestStatus": "warning",
      "next": "codebase-comprehension",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "define-problem",
        "classify-problem",
        "determine-path",
        "document-philosophy",
        "collect-assumptions",
        "create-assumptions-log",
        "reconcile-assumptions",
      ],
      "unresolved": [
        "agent-conduct::checkpoint-discipline",
        "agent-conduct::code-commentary",
        "agent-conduct::file-sensitivity",
        "agent-conduct::operational-discipline",
      ],
    },
    {
      "activity": "codebase-comprehension",
      "artifacts": [
        "{codebase-area}.md",
      ],
      "artifactsWritten": [],
      "checkpoints": [],
      "manifestStatus": "warning",
      "next": "plan-prepare",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "check-existing-artifacts",
        "review-existing",
        "architecture-survey",
        "key-abstractions",
        "design-rationale",
        "domain-concept-mapping",
        "create-comprehension-artifact",
        "initial-deep-dive",
        "initial-lens-pass",
        "update-artifact-initial",
        "revise-initial-questions",
        "deep-dive-loop",
      ],
      "unresolved": [
        "agent-conduct::checkpoint-discipline",
        "agent-conduct::code-commentary",
        "agent-conduct::file-sensitivity",
        "agent-conduct::operational-discipline",
      ],
    },
    {
      "activity": "plan-prepare",
      "artifacts": [
        "work-package-plan.md",
        "test-plan.md",
      ],
      "artifactsWritten": [
        "work-package-plan.md",
        "test-plan.md",
      ],
      "checkpoints": [
        {
          "id": "approach-confirmed",
          "option": "confirmed",
          "setVariable": undefined,
        },
      ],
      "manifestStatus": "valid",
      "next": "assumptions-review",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "env-prerequisites",
        "apply-design",
        "create-plan",
        "create-test-plan",
        "present-solution-overview",
        "collect-assumptions",
        "update-assumptions-log",
        "reconcile-assumptions",
        "create-todos",
        "sync-branch",
        "update-pr",
      ],
      "unresolved": [
        "agent-conduct::checkpoint-discipline",
        "agent-conduct::code-commentary",
        "agent-conduct::file-sensitivity",
        "agent-conduct::operational-discipline",
      ],
    },
    {
      "activity": "assumptions-review",
      "artifacts": [
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "assumptions-log.md",
      ],
      "checkpoints": [],
      "manifestStatus": "valid",
      "next": "implement",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "evaluate-open-assumptions",
        "update-assumptions-log",
      ],
      "unresolved": [
        "agent-conduct::checkpoint-discipline",
        "agent-conduct::code-commentary",
        "agent-conduct::file-sensitivity",
        "agent-conduct::operational-discipline",
      ],
    },
    {
      "activity": "implement",
      "artifacts": [
        "assumptions-log.md",
        "provenance-log.md",
      ],
      "artifactsWritten": [
        "assumptions-log.md",
        "provenance-log.md",
      ],
      "checkpoints": [
        {
          "id": "switch-model-post-impl",
          "option": "continue-current",
          "setVariable": undefined,
        },
      ],
      "manifestStatus": "warning",
      "next": "post-impl-review",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "reconcile-assumptions",
        "present-resolved-assumptions",
        "interview-open-assumptions",
        "update-assumptions-log",
      ],
      "unresolved": [
        "agent-conduct::checkpoint-discipline",
        "agent-conduct::code-commentary",
        "agent-conduct::file-sensitivity",
        "agent-conduct::operational-discipline",
      ],
    },
    {
      "activity": "post-impl-review",
      "artifacts": [
        "change-block-index.md",
        "manual-diff-review.md",
        "code-review.md",
        "test-suite-review.md",
        "architecture-summary.md",
        "structural-findings.md",
      ],
      "artifactsWritten": [
        "change-block-index.md",
        "manual-diff-review.md",
        "code-review.md",
        "test-suite-review.md",
        "architecture-summary.md",
        "structural-findings.md",
      ],
      "checkpoints": [
        {
          "id": "file-index-table",
          "option": "rationale-confirmed",
          "setVariable": {
            "rationale_confirmed": true,
          },
        },
      ],
      "manifestStatus": "valid",
      "next": "validate",
      "orphanCheckpoints": [
        "block-interview",
        "rationale-amendment",
      ],
      "stepsExecuted": [
        "gitnexus-detect-changes-preflight",
        "manual-diff-review",
        "code-review",
        "structural-analysis-inline",
        "test-suite-review",
        "architecture-summary",
        "classify-and-route-findings",
      ],
      "unresolved": [
        "agent-conduct::checkpoint-discipline",
        "agent-conduct::code-commentary",
        "agent-conduct::file-sensitivity",
        "agent-conduct::operational-discipline",
      ],
    },
    {
      "activity": "validate",
      "artifacts": [],
      "artifactsWritten": [],
      "checkpoints": [],
      "manifestStatus": "warning",
      "next": "strategic-review",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "evaluate-results",
        "fix-failures",
      ],
      "unresolved": [
        "agent-conduct::checkpoint-discipline",
        "agent-conduct::code-commentary",
        "agent-conduct::file-sensitivity",
        "agent-conduct::operational-discipline",
        "cargo-operations::build-release",
        "cargo-operations::preflight",
        "cargo-operations::run-suite",
        "manage-artifacts::verify-readme-conforms",
        "validate-build::aggregate-results",
        "validate-build::analyze-failure",
        "validate-build::apply-fix",
      ],
    },
    {
      "activity": "strategic-review",
      "artifacts": [
        "strategic-review-{n}.md",
        "architecture-summary.md",
      ],
      "artifactsWritten": [
        "strategic-review-{n}.md",
        "architecture-summary.md",
      ],
      "checkpoints": [
        {
          "id": "review-findings",
          "option": "acceptable",
          "setVariable": {
            "review_passed": true,
          },
        },
      ],
      "manifestStatus": "warning",
      "next": "submit-for-review",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "diff-review",
        "identify-artifacts",
        "verify-readme",
        "ensure-changes-folder-entry",
        "verify-change-fragment",
        "document-findings",
        "apply-cleanup",
        "create-architecture-summary",
        "analyze-strategic-findings",
      ],
      "unresolved": [
        "agent-conduct::checkpoint-discipline",
        "agent-conduct::code-commentary",
        "agent-conduct::file-sensitivity",
        "agent-conduct::operational-discipline",
      ],
    },
    {
      "activity": "submit-for-review",
      "artifacts": [],
      "artifactsWritten": [],
      "checkpoints": [
        {
          "id": "dco-sign-off",
          "option": "certify",
          "setVariable": undefined,
        },
        {
          "id": "review-received",
          "option": "yes-review",
          "setVariable": undefined,
        },
        {
          "id": "review-outcome",
          "option": "approved",
          "setVariable": {
            "review_requires_changes": false,
          },
        },
      ],
      "manifestStatus": "warning",
      "next": "complete",
      "orphanCheckpoints": [
        "body-non-conformant",
      ],
      "stepsExecuted": [
        "dco-sign-off",
        "push-commits",
        "update-description",
        "instruct-merge-strategy",
        "mark-ready",
        "await-review",
        "process-review-comments",
        "determine-review-outcome",
        "analyze-review-outcome",
      ],
      "unresolved": [
        "agent-conduct::checkpoint-discipline",
        "agent-conduct::code-commentary",
        "agent-conduct::file-sensitivity",
        "agent-conduct::operational-discipline",
      ],
    },
    {
      "activity": "complete",
      "artifacts": [
        "NNNN-{decision-title}.md",
        "COMPLETE.md",
        "workflow-retrospective.md",
        "{YYYY-MM-DD}-pr{pr_number}-review-analysis.md",
      ],
      "artifactsWritten": [
        "COMPLETE.md",
        "workflow-retrospective.md",
      ],
      "checkpoints": [],
      "manifestStatus": "warning",
      "next": null,
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "finalize-test-plan",
        "create-complete-doc",
        "ensure-docs",
        "capture-history",
        "retrospective",
        "update-status",
        "select-next",
      ],
      "unresolved": [
        "agent-conduct::checkpoint-discipline",
        "agent-conduct::code-commentary",
        "agent-conduct::file-sensitivity",
        "agent-conduct::operational-discipline",
      ],
    },
  ],
  "workflowId": "work-package",
}
`;
